# python-project-lvl2

./: .coverage  Makefile  README.md  coverage.xml  pyproject.toml
.github/workflows/: pyci.yml  tests and linter.yml
gendiff/: __init__.py  data_parser.py  format_determiner.py  format_selector.py  gendiff.py  gendiff_json.py  gendiff_yml.py  loaders.py  parser.py  pre_diff_maker.py  processor.py
gendiff/formatters/: json_formatter.py  plain_formatter.py  stylish_formatter.py
gendiff/scripts/: gendiff.py  main.py  parser.py  pre_diff_maker.py
gendiff/tests/: test_gendiff.py
gendiff/tests/fixtures/: test1.json  test1.yml  test2.json  test2.yml  test4_nested1.yml  test4_nested2.yml  test_string.py
tests/: test_gendiff.py
tests/fixtures/: diff_string.py  diff_string_json
